--- a/public/index.html
+++ b/public/index.html
@@ -183,8 +183,20 @@
           <input id="adminFullName" type="text" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="Enter your full name">
         </div>
         <div>
+          <label class="block text-sm font-medium text-gray-700 mb-2">Store Name</label>
+          <input id="adminStoreName" type="text" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="Enter your store name">
+        </div>
+        <div>
           <label class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
           <input id="adminRegisterEmail" type="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="Enter your email">
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-2">Store Address</label>
+          <input id="adminStoreAddress" type="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="Enter the address of your store">
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-2">Phone Number</label>
+          <input id="adminPhoneNumber" type="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent" placeholder="Enter your phone number">
         </div>
         <div class="relative mb-4">
           <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
@@ -219,7 +231,9 @@
             adminRegister(
               document.getElementById('adminRegisterEmail').value,
               document.getElementById('adminRegisterPassword').value,
-              document.getElementById('adminFullName').value
+              document.getElementById('adminFullName').value,
+              document.getElementById('adminStoreName').value,
+              document.getElementById('adminPhoneNumber').value
             );
           } else {
             alert('Passwords do not match!');
